seakeeping_src_filenames += [
    'seakeeping_constants.f90',
    'seakeeping_geometry.f90',
    'seakeeping_kinds.F90',
    'seakeeping_math.f90',
    'seakeeping_module.f90',
    'seakeeping_statics.f90',
    'seakeeping_tsa.f90',
    'seakeeping_wave.f90',
]
seakeeping_src += files(seakeeping_src_filenames)
