seakeeping_src_filenames += [
    'seakeeping_collection_queue_int.f90',
    'seakeeping_collection_queue_real.f90',
    'seakeeping_collection_queue.f90',
    'seakeeping_collection_stack_int.f90',
    'seakeeping_collection_stack_real.f90',
    'seakeeping_collection_stack.f90',
    'seakeeping_collection_vector_int.f90',
    'seakeeping_collection_vector_real.f90',
    'seakeeping_collection_vector.f90',
    'seakeeping_collection.f90',
    'seakeeping_constants.f90',
    'seakeeping_geometry.f90',
    'seakeeping_kinds.F90',
    'seakeeping_leapfrog.f90',
    'seakeeping_math.f90',
    'seakeeping_module.f90',
    'seakeeping_statics.f90',
    'seakeeping_tsa.f90',
    'seakeeping_wave.f90',
]
seakeeping_src += files(seakeeping_src_filenames)
